package com.directi.training.ocp.exercice_refactored;

public class SpaceResource implements Resource {
    
    public void markSlotFree(int resourceId)
    {
    }

    public void markSlotBusy(int resourceId)
    {
    }

    public int findFreeSlot()
    {
        return 0;
    }
}
